# esp-hal

./: I2C_SLAVE_TX_FIFO_BUFFERING_FIX.md
esp-hal/: README.md
esp-hal/src/i2c/: mod.rs
esp-hal/src/i2c/slave/: CHAT.md  DESIGN.md  ESP32C6_I2C_SLAVE_FIRST_BYTE_ISSUE.md  ESP32_MASTER_COMPATIBILITY.md  EXAMPLE.rs.txt  FILE_SUMMARY.md  I2C_SLAVE_WRITE_READ_SUPPORT.md  INDEX.md  MASTER_SUPPORT_COMPLETE.md  QUICKSTART.md  README.md  TESTING.md  TEST_SUITE_UPDATES.md  mod.rs
esp-hal/src/i2c/slave/test-examples/: ASYNC_LIMITATIONS.md  INTERRUPT_BASED_DESIGN.md  QUICKSTART.md  README.md
esp-hal/src/i2c/slave/test-examples/async-test/: DEVICE-SUPPORT.md  QUICK-REFERENCE.md  README.md
esp-hal/src/i2c/slave/test-examples/async-test/master/: Cargo.toml  README.md  build.sh  espflash.toml  (+2 more)
esp-hal/src/i2c/slave/test-examples/async-test/slave/: Cargo.toml  README.md  build.sh  espflash.toml  espflash_port.toml  flash.sh
esp-hal/src/i2c/slave/test-examples/async-test/slave/src/: main.rs
esp-hal/src/i2c/slave/test-examples/blocking-test/: IMPLEMENTATION-SUMMARY.md  QUICK-REFERENCE.md  README.md
esp-hal/src/i2c/slave/test-suite/: README.md  TEST_SUITE_SUMMARY.md  mod.rs
esp-hal/src/i2c/slave/test-suite/async_tests/: async_operations.rs  concurrent_tests.rs  future_tests.rs  mod.rs
esp-hal/src/i2c/slave/test-suite/functional/: address_tests.rs  basic_comm.rs  clock_stretch_tests.rs  error_condition_tests.rs  fifo_tests.rs  filter_tests.rs  interrupt_tests.rs  mod.rs
esp-hal/src/i2c/slave/test-suite/helpers/: mock_master.rs  mod.rs  test_utils.rs
esp-hal/src/i2c/slave/test-suite/integration/: mod.rs  os_tests.rs  peripheral_tests.rs
esp-hal/src/i2c/slave/test-suite/master-support/: README.md  WRITE_READ_SUPPORT.md  async_support.rs  common.rs  functional.rs  integration.rs  mod.rs  performance.rs  reliability.rs
esp-hal/src/i2c/slave/test-suite/performance/: mod.rs  speed_tests.rs  throughput_tests.rs
esp-hal/src/i2c/slave/test-suite/reliability/: mod.rs  recovery_tests.rs  stress_tests.rs
esp-hal/src/i2c/slave/test-suite/unit/: config_tests.rs  driver_tests.rs  error_tests.rs  mod.rs
esp-hal/src/i2c/slave_async/: README.md  config.rs  driver.rs  instance.rs  mod.rs  state.rs
esp-hal/src/i2c/slave_async/test-examples/: README.md
esp-hal/src/i2c/slave_async/test-examples/basic-tests/: STATUS.md
esp-hal/src/i2c/slave_async/test-examples/basic-tests/slave/: Cargo.toml  README.md  build.rs  build.sh  monitor.sh
esp-hal/src/i2c/slave_async/test-examples/basic-tests/slave/.cargo/: config.toml
esp-hal/src/i2c/slave_async/test-examples/basic-tests/slave/src/: main.rs
esp-hal/src/zigbee/: APS_INTEGRATION_COMPLETE.md  APS_LAYER.md  CHAT.md  ENCRYPTION.md  ENCRYPTION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  MAC_ASSOCIATION.md  MAC_ASSOCIATION_COMPLETE.md  NETWORK_STACK.md  QUICK_REFERENCE.md  RADIO_INTEGRATION.md  RADIO_INTEGRATION_COMPLETE.md  RADIO_INTEGRATION_UPDATE.md  README.md  STORAGE.md  STORAGE_COMPLETE.md  TIMER_SERVICE.md  TIMER_SERVICE_COMPLETE.md  ZDO_ZCL_REMAINING.md  aps.rs  config.rs  coordinator.rs  crypto.rs  device.rs  mac_association.rs  mod.rs  network.rs  nwk.rs  radio.rs  routing.rs  security.rs  storage.rs  timer_service.rs  zcl.rs  zdo.rs
esp-hal/src/zigbee/test-suite/: FILE_STRUCTURE.md  GENERATION_SUMMARY.md  README.md  STORAGE_TESTING.md  STORAGE_TESTING_COMPLETE.md  TEST_SUITE_COMPLETE.md  helpers.rs  mocks.rs  mod.rs
esp-hal/src/zigbee/test-suite/integration_tests/: data_transmission_tests.rs  device_joining_tests.rs  mod.rs  network_formation_tests.rs  security_integration_tests.rs  storage_integration_tests.rs  zcl_integration_tests.rs
esp-hal/src/zigbee/test-suite/unit_tests/: config_tests.rs  coordinator_tests.rs  device_tests.rs  mod.rs  network_tests.rs  security_tests.rs  storage_tests.rs  zcl_tests.rs  zdo_tests.rs
esp-metadata-generated/src/: _build_script_utils.rs  _generated_esp32.rs  _generated_esp32c3.rs  _generated_esp32c6.rs  _generated_esp32h2.rs  _generated_esp32s2.rs  _generated_esp32s3.rs
esp-metadata/devices/: esp32.toml  esp32c3.toml  esp32c6.toml  esp32h2.toml  esp32s2.toml  esp32s3.toml
esp-metadata/src/: cfg.rs  lib.rs
esp-metadata/src/cfg/: i2c_slave.rs
examples/zigbee/coordinator/src/: main.rs
examples/zigbee/end_device/src/: main.rs
(+15 files in other folders)
